--- a/tests/res/values/strings.xml
+++ b/tests/res/values/strings.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  Copyright 2013 SecureKey Technologies Inc.
+  
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+    
+  http://www.apache.org/licenses/LICENSE-2.0
+   
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+-->
 <resources>
 
     <string name="app_name">TestsTest</string>
-
+	<string name="registering_text">Registering...</string>
+    <string name="registration_success_text">Registration Success!</string>
+    <string name="registration_already_present_text">Device is already registered!</string>
+    <string name="registration_error_text">Registration Error!</string>
+    <string name="tvEmailAddress">Email Address: </string>
+	<string name="tvVerificationPin">Verification Code: </string>
+	<string name="btnStartVerification">Verify</string>
+	<string name="resendVerificationText">Resend Code</string>
+	<string name="btnCompleteVerification">Send Code</string>
+	<string name="tvStartVerificationInfoText">Enter your email address and tap verify to being the registration process.</string>
+	<string name="tvCompleteVerificationInfoText">Enter the verification code you received.</string>
+	<string name="tvStep1Text">Step 1</string>
+	<string name="tvStep2Text">Step 2</string>
 </resources>
