--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -55,4 +55,12 @@
 		<item >email</item>
 		<item >address</item>
 	</string-array>
+	<string name="home_screen_text">Home</string>
+	<string name="no_qrcode_dialog_message">You will need to update the Google Search app in the app store or install the ZXing Barcode scanner app in order to 
+	    scan a QR code</string>
+	    <string name="no_qrcode_dialog_title">Update or install</string>
+	    <string name="install_button">Install</string>
+	    <string name="cancel">Cancel</string>
+	    <string name="scan_qr_code">Scan\nQR Code</string>
+	    <string name="manage_info">Manage\nInformation</string>
 </resources>
