--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -14,7 +14,6 @@
   limitations under the License.
 -->
 <resources>
-
     <string name="app_name">MIDaas App</string>
     <string name="registering_text">Registering&#8230;</string>
     <string name="registration_success_text">Registration Success!</string>
@@ -38,7 +37,7 @@
 	<string name="sendingEmailText">Sending email&#8230;</string>
 	<string name="init_attribute_verification">Initializing verification</string>
 	<string name="noAttributesPresentText">You do not have any information.\nTry adding some by tapping the button on the top right corner.</string>
-	<style name="buttonText">
+	<style name="standardButtonStyle">
    		<item name="android:layout_width">fill_parent</item>
     	<item name="android:layout_height">wrap_content</item>
     	<item name="android:textColor">#ffffff</item>
@@ -50,11 +49,18 @@
 	    <item name="android:shadowDy">1</item>
 	    <item name="android:shadowRadius">2</item>
 	</style>
-	<string-array name="attribute_category">
-		<item >Personal</item>
-		<item >email</item>
-		<item >address</item>
-	</string-array>
+	<style name="addButtonStyle">
+    	<item name="android:textColor">#ffffff</item>
+    	<item name="android:gravity">center_horizontal|center_vertical</item>
+	    <item name="android:textSize">20sp</item>
+	    <item name="android:textStyle">bold</item>
+	    <item name="android:shadowColor">#000000</item>
+	    <item name="android:shadowDx">1</item>
+	    <item name="android:shadowDy">1</item>
+	    <item name="android:shadowRadius">2</item>
+	    <item name="android:layout_marginRight">5dp</item>
+	    <item name="android:text">+</item>
+	</style>
 	<string name="home_screen_text">Home</string>
 	<string name="no_qrcode_dialog_message">You will need to update the Google Search app in the app store or install the ZXing Barcode scanner app in order to 
 	    scan a QR code</string>
@@ -63,4 +69,5 @@
 	    <string name="cancel">Cancel</string>
 	    <string name="scan_qr_code">Scan\nQR Code</string>
 	    <string name="manage_info">Manage\nInformation</string>
+	    <string name="rear_camera_not_present_text">No rear camera was detected on this phone. You will need a device equipped with a rear camera to take a picture of a QR code.</string>
 </resources>
