--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -64,10 +64,32 @@
 	<string name="home_screen_text">Home</string>
 	<string name="no_qrcode_dialog_message">You will need to update the Google Search app in the app store or install the ZXing Barcode scanner app in order to 
 	    scan a QR code</string>
-	    <string name="no_qrcode_dialog_title">Update or install</string>
-	    <string name="install_button">Install</string>
-	    <string name="cancel">Cancel</string>
-	    <string name="scan_qr_code">Scan\nQR Code</string>
-	    <string name="manage_info">Manage\nInformation</string>
-	    <string name="rear_camera_not_present_text">No rear camera was detected on this phone. You will need a device equipped with a rear camera to take a picture of a QR code.</string>
+    <string name="no_qrcode_dialog_title">Update or install</string>
+    <string name="install_button">Install</string>
+    <string name="cancel">Cancel</string>
+    <string name="scan_qr_code">Scan\nQR Code</string>
+    <string name="manage_info">Manage\nInformation</string>
+    <string name="rear_camera_not_present_text">No rear camera was detected on this phone. You will need a device equipped with a rear camera to take a picture of a QR code.</string>
+    <string name="country_prompt">Choose a country</string>
+	<string-array name="country_arrays">
+        <item>Canada</item>
+        <item>United States</item>
+    </string-array>
+    <string name="state_prompt">Choose a state/province</string>
+	<string-array name="state_arrays">
+        <item>Ontario</item>
+        <item>Massachusetts</item>
+    </string-array>
+     <string name="address_labels_prompt">Choose a label for this address</string>
+	<string-array name="address_labels_arrays">
+        <item>Home</item>
+        <item>Work</item>
+        <item>Shipping</item>
+        <item>Billing</item>
+    </string-array>
+    <string name="streetAddressHint">Street Address</string>
+    <string name="cityHint">City/Town</string>
+    <string name="zipHint">Zip/Postal Code</string>
+    <string name="btnSaveAndCloseText">Save and Close</string>
+    <string name="selectLabelText">Select a label: </string>
 </resources>
