--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -155,4 +155,5 @@
     <string name="btnSaveAndCloseText">Save and Close</string>
     <string name="selectLabelText">Select a label: </string>
     <string name="authorization_title_text">Authorize</string>
+    <string name="authorizeButtonText">Authorize</string>
 </resources>
