--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -154,4 +154,33 @@
     <string name="zipHint">Zip/Postal Code</string>
     <string name="btnSaveAndCloseText">Save and Close</string>
     <string name="selectLabelText">Select a label: </string>
+    <string name="creditCardHint">Credit Card Number</string>
+    <string name="month_prompt">Expiry Month</string>
+	<string-array name="month_array">
+	    <item>1</item>
+	    <item>2</item>
+	    <item>3</item>
+	    <item>4</item>
+	    <item>5</item>
+	    <item>6</item>
+	    <item>7</item>
+	    <item>8</item>
+	    <item>9</item>
+	    <item>10</item>
+	    <item>11</item>
+	    <item>12</item>
+	</string-array>
+	<string name="year_prompt">Expiry Year</string>
+	<string-array name="year_array">
+	    <item>2013</item>
+	    <item>2014</item>
+	    <item>2015</item>
+	    <item>2016</item>
+	    <item>2017</item>
+	    <item>2018</item>
+	    <item>2019</item>
+	    <item>2020</item>
+	</string-array>
+	<string name="creditCardCCVHint">CCV</string>
+	<string name="creditCardHolderNameHint">Card Holder Name</string>
 </resources>
