--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -61,6 +61,10 @@
 	    <item name="android:layout_marginRight">5dp</item>
 	    <item name="android:text">+</item>
 	</style>
+	<style name="textViewStyle">
+	    <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
+	    <item name="android:textColor">#000000</item>
+	</style>
 	<string name="home_screen_text">Home</string>
 	<string name="no_qrcode_dialog_message">You will need to update the Google Search app in the app store or install the ZXing Barcode scanner app in order to 
 	    scan a QR code</string>
@@ -154,33 +158,25 @@
     <string name="zipHint">Zip/Postal Code</string>
     <string name="btnSaveAndCloseText">Save and Close</string>
     <string name="selectLabelText">Select a label: </string>
-    <string name="creditCardHint">Credit Card Number</string>
+    <string name="creditCardHint">Card Number</string>
     <string name="month_prompt">Expiry Month</string>
+    <string name="month_label">Month</string>
 	<string-array name="month_array">
-	    <item>1</item>
-	    <item>2</item>
-	    <item>3</item>
-	    <item>4</item>
-	    <item>5</item>
-	    <item>6</item>
-	    <item>7</item>
-	    <item>8</item>
-	    <item>9</item>
+	    <item>01</item>
+	    <item>02</item>
+	    <item>03</item>
+	    <item>04</item>
+	    <item>05</item>
+	    <item>06</item>
+	    <item>07</item>
+	    <item>08</item>
+	    <item>09</item>
 	    <item>10</item>
 	    <item>11</item>
 	    <item>12</item>
 	</string-array>
 	<string name="year_prompt">Expiry Year</string>
-	<string-array name="year_array">
-	    <item>2013</item>
-	    <item>2014</item>
-	    <item>2015</item>
-	    <item>2016</item>
-	    <item>2017</item>
-	    <item>2018</item>
-	    <item>2019</item>
-	    <item>2020</item>
-	</string-array>
+	<string name="year_label">Year</string>
 	<string name="creditCardCCVHint">CCV</string>
 	<string name="creditCardHolderNameHint">Card Holder Name</string>
 </resources>
