--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -184,4 +184,6 @@
     <string name= "invalidAttributeRequestMessage">The request appears to be invalid. Please try again.</string>
     <string name= "attributeSetParseErrorMessage">A fatal error just occurred. Please try again.</string>
     <string name="fatalErrorMessage">Fatal error. Please restart the app</string>
+    <string name="rpInfoText">is requesting release of the following information</string>
+    <string name="defaultAuthorizationInfo"><b>Bold</b> fields are required fields.</string>
 </resources>
