--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -186,4 +186,6 @@
     <string name="fatalErrorMessage">Fatal error. Please restart the app</string>
     <string name="rpInfoText">is requesting the following information</string>
     <string name="defaultAuthorizationInfo"><b>Bold</b> fields are required fields.</string>
+    <string name="doneText">Done</string>
+    <string name="doneImageDescription">You are done</string>
 </resources>
