--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -214,4 +214,10 @@
 	<string name="rdBtnPhoneText">Phone Call</string>
     <string name="noAttributeSelectedLabel">No attribute selected</string>
     <string name="attributeAddOnFlyError">Attribute could not be added to the list. </string>
+    <string name="rememberAuthorization">Remember my selection</string>
+    <string name="consentActivityTitleText">Manage Consent</string>
+    <string name="consentDetailsDialogTitle">Consent Details</string>
+    <string name="btnRevokeConsent">Revoke Consent</string>
+    <string name="noConsentsPresentText">You have no saved consents.\nYou can always save consents by checking the \"Remember my selection\" when authorizing.</string>
+    <string name="consentDetailsDialogInfoText">You have consented to release the following to</string>
 </resources>
