--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -215,7 +215,7 @@
     <string name="noAttributeSelectedLabel">No attribute selected</string>
     <string name="attributeAddOnFlyError">Attribute could not be added to the list. </string>
     <string name="rememberAuthorization">Remember my selection</string>
-    <string name="consentActivityTitleText">Manage Consent</string>
+    <string name="consentActivityTitleText">Revoke Consent</string>
     <string name="consentDetailsDialogTitle">Consent Details</string>
     <string name="btnRevokeConsent">Revoke Consent</string>
     <string name="noConsentsPresentText">You have no saved consents.\nYou can save consents by checking the \"Remember my selection\" box when authorizing.</string>
@@ -256,7 +256,7 @@
 	<string name="radioButtonSMSVerifyText">SMS</string>
 	
 	<string name="help">Help</string>
-	<string name="about_us">About us</string>
+	<string name="about_us">About</string>
 	<string name="revoke_permission">Revoke Consent</string>
 	<string name="help_text">Help text goes here!</string>
 	<string name="about_us_heading">{open}MIDaaS</string>
@@ -277,6 +277,7 @@
 	<string name="enter_url_dialog">Enter the URL as shown on your browser</string>
 	<string name="enter_url_hint">https://</string>
 	<string name="openMIDaas_url">http://openmidaas.org</string>
+	<string name="tabs">Tabs</string>
 	
 	
 </resources>
