--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -264,7 +264,7 @@
 		<![CDATA[
 		<html>
 		 <head></head>
-		 <body style="text-align:justify;color:black;background-color:#D8DCE3;">
+		 <body style="text-align:justify;color:black;background-color:#CED6D6;">
 			<p> It is annoying when you have to manage your profile at every online service, isn\'t it? You might have tried using cloud services like Google and Facebook. Although there is nothing wrong with using those cloud services, but your profile information is yours, so shouldn\'t you be in complete control of it? Why not leverage something you are most likely have with you all the time, to hold this information securely? Why not use this tool to control how the online world gets your personal information? 
 			No more passwords. No more account information fill out forms. No more eCommerce forms.</p> 
 			<p> OpenMIDaas is a open source project that aids at providing Mobile Identity as a Service. The main idea is to make your mobile device the center of your authentication and user profile world. You can read more about it on <a href="http://openmidaas.org">www.openmidaas.org</a>.</p> 
