--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -289,5 +289,6 @@
 	<string name="emptyURI">URI cannot be empty/null.</string>
 	<string name="gcmServiceClass">org.openmidaas.app.services.GCMIntentService</string>
 	<string name="registerPush">Push Registration</string>
+	<string name="yourInfo">Your Info</string>
 	
 </resources>
